Prevent scroll on screens that don't overflow

--- a/src/index.css
+++ b/src/index.css
@@ -16,12 +16,14 @@ html {
 body {
   display: flex;
   font-size: 18px;
-  min-height: -webkit-fill-available;
+  height: var(--vh);
   overflow-x: hidden;
   overflow-y: auto;
 }
 
 :root {
+  --vh: 100vh;
+
   font-family: Helvetica;
   line-height: 1.5;
   font-weight: 400;
